theming/scss/layouts/_profile.scss
@use '../base/' as *;
@use '../base/mixins' as *;

main.main .content .content__container.content__container--profile {
    .content {
        &__side {
            @extend .py-5;
            @extend .pe-4;
        }
        &__main {
            @extend .py-5;
            @extend .pe-0;
        }
    }

    .profile-sidebar {
        &__img {
            @extend .d-flex;
            @extend .flex-row;
            @extend .justify-content-center;
            @extend .pb-3;
        }

        &__block {
            @extend .pt-3;
            @extend .pb-2;
            @extend .border-bottom;

            p {
                @extend .mb-1;
            }
        }

        &__name {
            @extend .fs-4;
            @extend .fw-semibold;
            @extend .mb-0;
        }
    }

    .header {
        @extend .pt-2;
        @extend .fs-4;
        @extend .fw-semibold;
        @extend .text-secondary;
    }
}

.profile {
    &-rvw {
        &__item {
            @extend .d-flex;
            @extend .flex-column;
            @extend .p-3;
            @extend .pb-2;
            @extend .mb-2;

            &--highlight {
                @extend .bg-light;
                @extend .border;
                @extend .mb-4;

                &.profile-rvw__item--contributor {
                    border-left: 4px solid $purple-500 !important;
                }

                &.profile-rvw__item--reviewer {
                    border-left: 4px solid $cyan-500 !important;
                }
            }
        }

        &__item-top {
            @extend .d-flex;
            @extend .flex-row;
            @extend .justify-content-between;
            @extend .pb-3;
        }

        &__item-btm {
            @extend .d-flex;
            @extend .flex-row;
            @extend .justify-content-between;
            @extend .align-items-center;
            @extend .pb-2;
        }

        &__item-left {
            @extend .d-flex;
            @extend .flex-row;
            @extend .text-start;
        }

        &__item-right {
            @extend .d-flex;
            @extend .flex-row;
            @extend .text-end;
        }

        &__item-type {
            @extend .position-relative;
            @extend .text-uppercase;
            @extend .pe-2;
            @extend .fw-semibold;
            @extend .text-secondary;
        }

        &__item--done {
            @extend .border;
            
            .profile-rvw__item-type {
                @extend .ps-3;
            }

            .profile-rvw__item-type::before {
                content: "";
                @extend .position-absolute;
                @extend .rounded-circle;
                width: 8px;
                height: 8px;
                left: 0;
                top: 0.45rem;
            }

            &.profile-rvw__item--contributor .profile-rvw__item-type::before {
                background-color: $purple-500;
            }

            &.profile-rvw__item--reviewer .profile-rvw__item-type::before {
                background-color: $cyan-500;
            }
        }

        &__item-status {
            @extend .rounded-pill;
            @extend .border;
            @extend .border-secondary;
            @extend .text-secondary;
            @extend .text-lowercase;
            @extend .px-2;
            height: fit-content;

            &--done {
                @extend .text-muted;
                border-color: $text-muted !important;
            }
        }

        &__item-name a {
            @extend .text-decoration-none;
            @extend .fw-semibold;
        }

        &__item-history {
            @extend .dropdown;

            button {
                @extend .btn;
                @extend .btn-light; 
                @extend .dropdown-toggle;
            }
        }

        &__list {
            @extend .mb-0;
            @extend .ps-0;

            li {
                @extend .d-inline-block;

                span {
                    @extend .fw-semibold;
                }
            }
        }
    }
}

